update to new naming convention, new instrument model
also handle 0 used for UNSEEN in SAT maps

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -54,7 +54,9 @@
     "simulations_observing_efficiency = dict(\n",
     "    pole=dict(SAT=0.3931149305555555, LAT=0.321544537037037),\n",
     "    chile=dict(SAT=0.8656164351851852, LAT=0.917306712962963),\n",
-    ")"
+    ")\n",
+    "\n",
+    "mapmaking_naming = {\"SAT\":\"telescope_all_time_all_filtered.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_bmap.fits\"}"
    ]
   },
   {
@@ -64,6 +66,24 @@
    "outputs": [],
    "source": [
     "#export\n",
+    "\n",
+    "from astropy.table import QTable\n",
+    "\n",
+    "def read_instrument_model(filename='instrument_model/cmbs4_instrument_model.tbl'):\n",
+    "    \"\"\"Read the CMB-S4 instrument model\n",
+    "    \n",
+    "    Includes all instrument parameters with units except bandpasses\n",
+    "    \n",
+    "    Paramters\n",
+    "    ---------\n",
+    "    filename : str path\n",
+    "        path to instrument model in ASCII IPAC format\n",
+    "    Returns\n",
+    "    -------\n",
+    "    s4 : QTable\n",
+    "        astropy table with units, 1 row per channel\n",
+    "    \"\"\"\n",
+    "    return QTable.read(filename, format='ascii.ipac')\n",
     "\n",
     "\n",
     "def get_telescope(channel):\n",
