--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -41,6 +41,8 @@
     "    get_observing_efficiency,\n",
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
+    "    mapmaking_naming,\n",
+    "    read_instrument_model\n",
     ")"
    ]
   },
@@ -50,7 +52,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py\n",
     "import toml"
    ]
   },
@@ -108,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s4 = h5py.File(\"cmbs4_tophat.h5\", 'r')"
+    "s4 = read_instrument_model()"
    ]
   },
   {
@@ -134,10 +135,10 @@
    "outputs": [],
    "source": [
     "for site in [\"Pole\", \"Chile\"]:\n",
-    "    for channel in s4.keys():\n",
-    "        telescope_years = get_telecope_years(config, site, channel)\n",
-    "        print(site, channel, telescope_years)\n",
-    "        telescope = get_telescope(channel)\n",
+    "    for channel in s4:\n",
+    "        telescope_years = get_telecope_years(config, site, channel[\"band\"])\n",
+    "        print(site, channel[\"band\"], telescope_years)\n",
+    "        telescope = get_telescope(channel[\"band\"])\n",
     "        if site == \"Chile\":\n",
     "            if telescope == \"SAT\":\n",
     "                assert telescope_years == 0, \"All SAT at Pole\"\n",
@@ -187,13 +188,15 @@
     "    band = get_band(channel)\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
-    "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
+    "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_{mapmaking_naming[telescope]}\"\n",
     "    )\n",
     "    log.info(f\"Reading {map_filename}\")\n",
     "    atmosphere_map = hp.read_map(\n",
     "        Path(base_folder) / map_filename, (0, 1, 2), dtype=None, verbose=False\n",
     "    )\n",
     "    atmosphere_map[atmosphere_map == hp.UNSEEN] = np.nan\n",
+    "    atmosphere_map[atmosphere_map == 0] = np.nan\n",
+    "    \n",
     "    # input map is 10 days at 100% efficiency\n",
     "    atmosphere_map *= np.sqrt(\n",
     "        10\n",
@@ -261,8 +264,17 @@
    "source": [
     "input_map = hp.read_map(\n",
     "    base_folder + \"/00000000/\" + \\\n",
-    "    f\"{site.lower()}_atmosphere_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
+    "    f\"{site.lower()}_atmosphere_{telescope}_{channel}_telescope_all_time_all_filtered.fits.gz\"\n",
     ", (0,1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_map[input_map == 0] = hp.UNSEEN"
    ]
   },
   {
