--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -50,6 +50,8 @@
     "    get_observing_efficiency,\n",
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
+    "    read_instrument_model,\n",
+    "    mapmaking_naming\n",
     ")"
    ]
   },
@@ -149,9 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py\n",
-    "\n",
-    "s4 = h5py.File(\"cmbs4_tophat.h5\", 'r')"
+    "s4 = read_instrument_model()"
    ]
   },
   {
@@ -246,7 +246,7 @@
     "    band = get_band(channel)\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
-    "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
+    "        / f\"{site.lower()}_noise_{telescope}_{channel}_{mapmaking_naming[telescope]}\"\n",
     "    )\n",
     "    log.info(f\"Base folder: {base_folder}\")\n",
     "    log.info(f\"Reading {map_filename}\")\n",
@@ -254,6 +254,8 @@
     "        Path(base_folder) / map_filename, (0, 1, 2), dtype=None, verbose=False\n",
     "    )\n",
     "    output_map[output_map == hp.UNSEEN] = np.nan\n",
+    "    output_map[output_map == 0] = np.nan\n",
+    "    \n",
     "    # input map is 10 days at 100% efficiency\n",
     "    output_map *= np.sqrt(\n",
     "        10\n",
@@ -332,8 +334,17 @@
    "source": [
     "input_map = hp.read_map(\n",
     "    base_folder + \"/00000000/\" + \\\n",
-    "    f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_bmap.fits\"\n",
+    "    f\"{site.lower()}_noise_{telescope}_{channel}_telescope_all_time_all_filtered.fits.gz\"\n",
     ", (0,1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_map[input_map == 0] = hp.UNSEEN"
    ]
   },
   {
@@ -400,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[0], min=-1e-4, max=1e-4, unit=\"K\", title=\"Noise I\")"
+    "hp.mollview(output_map[0], min=-1e-6, max=1e-6, unit=\"K\", title=\"Noise I\")"
    ]
   },
   {
@@ -409,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[1], min=-1e-4, max=1e-4, unit=\"K\", title=\"Noise Q\")"
+    "hp.mollview(output_map[1], min=-1e-5, max=1e-5, unit=\"K\", title=\"Noise Q\")"
    ]
   },
   {
@@ -418,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hp.mollview(output_map[2], min=-1e-4, max=1e-4, unit=\"K\", title=\"Noise U\")"
+    "hp.mollview(output_map[2], min=-1e-5, max=1e-5, unit=\"K\", title=\"Noise U\")"
    ]
   },
   {
