--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -48,6 +48,8 @@
     "    get_observing_efficiency,\n",
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
+    "    read_instrument_model,\n",
+    "    mapmaking_naming\n",
     ")\n",
     "from s4_design_sim_tool.noise import get_thinfp, get_tube_years"
    ]
@@ -80,6 +82,9 @@
    "outputs": [],
    "source": [
     "# exports\n",
+    "\n",
+    "hitmaps_naming = {\"SAT\":\"telescope_all_time_all_hits.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_hmap.fits\"}\n",
+    "wcov_naming = {\"SAT\":\"telescope_all_time_all_wcov.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_wcov.fits\"}\n",
     "\n",
     "\n",
     "def load_hitmap_wcov(config, site, channel, realization=0):\n",
@@ -130,11 +135,11 @@
     "\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
-    "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_hmap.fits\"\n",
+    "        / f\"{site.lower()}_noise_{telescope}_{channel}_{hitmaps_naming[telescope]}\"\n",
     "    )\n",
     "    wcov_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
-    "        / f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_wcov.fits\"\n",
+    "        / f\"{site.lower()}_noise_{telescope}_{channel}_{wcov_naming[telescope]}\"\n",
     "    )\n",
     "    log.info(f\"Base folder: {base_folder}\")\n",
     "    log.info(f\"Reading {map_filename}\")\n",
@@ -216,7 +221,7 @@
    "source": [
     "input_map = hp.read_map(\n",
     "    base_folder + \"/00000000/\" + \\\n",
-    "    f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_hmap.fits\"\n",
+    "    f\"{site.lower()}_noise_{telescope}_{channel}_telescope_all_time_all_hits.fits.gz\"\n",
     ", 0)"
    ]
   },
@@ -236,7 +241,7 @@
    "outputs": [],
    "source": [
     "fits.open(base_folder + \"/00000000/\" + \\\n",
-    "    f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_wcov.fits\"\n",
+    "    f\"{site.lower()}_noise_{telescope}_{channel}_telescope_all_time_all_wcov.fits.gz\"\n",
     ")[1].header"
    ]
   },
@@ -247,7 +252,7 @@
    "outputs": [],
    "source": [
     "input_EE_wcov = hp.read_map(base_folder + \"/00000000/\" + \\\n",
-    "    f\"{site.lower()}_noise_{telescope}_{channel}_filtered_telescope_all_time_all_wcov.fits\"\n",
+    "    f\"{site.lower()}_noise_{telescope}_{channel}_telescope_all_time_all_wcov.fits.gz\"\n",
     ", (3))"
    ]
   },
