--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -63,15 +63,18 @@
    "source": [
     "# export\n",
     "\n",
-    "thinfp_string = \"\"\"telescope  band   thinfp\n",
-    "LAT        HFL      8\n",
-    "LAT        MFL      8\n",
-    "LAT        LFL      1\n",
-    "LAT        ULFL     1\n",
-    "SAT        HFS      8\n",
-    "SAT        MFHS     4\n",
-    "SAT        MFLS     4\n",
-    "SAT        LFS      1\n",
+    "thinfp_string = \"\"\"telescope\tband\tthinfp\n",
+    "LAT\tULF\t1\n",
+    "LAT\tLF\t4\n",
+    "LAT\tLFP\t4\n",
+    "LAT\tMF\t16\n",
+    "LAT\tHF\t16\n",
+    "LAT\tMFP\t16\n",
+    "LAT\tHFP\t16\n",
+    "SAT\tLF\t1\n",
+    "SAT\tMFL\t4\n",
+    "SAT\tMFH\t4\n",
+    "SAT\tHF\t8\n",
     "\"\"\"\n",
     "\n",
     "from astropy.io import ascii\n",
