observation efficiency factors

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -52,8 +52,8 @@
     "# export\n",
     "\n",
     "simulations_observing_efficiency = dict(\n",
-    "    pole=dict(SAT=0.3931149305555555, LAT=0.321544537037037),\n",
-    "    chile=dict(SAT=0.8656164351851852, LAT=0.917306712962963),\n",
+    "    pole=dict(SAT=0.642, LAT=0.754),\n",
+    "    chile=dict(SAT=0.988, LAT=1.042),\n",
     ")\n",
     "\n",
     "mapmaking_naming = {\"SAT\":\"telescope_all_time_all_filtered.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_bmap.fits\"}"
