update tests for thinning factor

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -88,6 +88,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "thinfp_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# exports\n",
     "\n",
     "\n",
@@ -104,7 +113,7 @@
     "    thinfp : int\n",
     "        thinning factor\n",
     "    \"\"\"\n",
-    "    return (thinfp_table[thinfp_table[\"band\"] == channel[:-1]])[\"thinfp\"]"
+    "    return (thinfp_table[thinfp_table[\"band\"] == channel[:-1]])[\"thinfp\"][0]"
    ]
   },
   {
@@ -113,9 +122,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert get_thinfp(\"ULFL1\") == 1\n",
-    "assert get_thinfp(\"HFL2\") == 8\n",
-    "assert get_thinfp(\"MFLS1\") == 4"
+    "assert get_thinfp(\"ULF1\") == 1\n",
+    "assert get_thinfp(\"HF2\") == 16\n",
+    "assert get_thinfp(\"MFL1\") == 4"
    ]
   },
   {
@@ -193,7 +202,8 @@
    "outputs": [],
    "source": [
     "for site in [\"Pole\", \"Chile\"]:\n",
-    "    for channel in s4.keys():\n",
+    "    for row in s4:\n",
+    "        channel = row[\"band\"]\n",
     "        tube_years = get_tube_years(config, site, channel)\n",
     "        print(site, channel, tube_years)\n",
     "        telescope = get_telescope(channel)\n",
