fix: thinning factors labels were wrong

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -64,7 +64,7 @@
     "# export\n",
     "\n",
     "thinfp_string = \"\"\"telescope\tband\tthinfp\n",
-    "LAT\tULF\t1\n",
+    "LAT\tULFP\t1\n",
     "LAT\tLF\t4\n",
     "LAT\tLFP\t4\n",
     "LAT\tMF\t16\n",
@@ -113,7 +113,7 @@
     "    thinfp : int\n",
     "        thinning factor\n",
     "    \"\"\"\n",
-    "    return (thinfp_table[thinfp_table[\"band\"] == channel[:-1]])[\"thinfp\"][0]"
+    "    return (thinfp_table[thinfp_table[\"band\"] == channel[:-2]])[\"thinfp\"][0]"
    ]
   },
   {
@@ -122,9 +122,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert get_thinfp(\"ULF1\") == 1\n",
-    "assert get_thinfp(\"HF2\") == 16\n",
-    "assert get_thinfp(\"MFL1\") == 4"
+    "assert get_thinfp(\"ULFPL1\") == 1\n",
+    "assert get_thinfp(\"HFS2\") == 16\n",
+    "assert get_thinfp(\"MFLS1\") == 4"
    ]
   },
   {
