fix: add telescope labels

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -64,17 +64,17 @@
     "# export\n",
     "\n",
     "thinfp_string = \"\"\"telescope\tband\tthinfp\n",
-    "LAT\tULFP\t1\n",
-    "LAT\tLF\t4\n",
-    "LAT\tLFP\t4\n",
-    "LAT\tMF\t16\n",
-    "LAT\tHF\t16\n",
-    "LAT\tMFP\t16\n",
-    "LAT\tHFP\t16\n",
-    "SAT\tLF\t1\n",
-    "SAT\tMFL\t4\n",
-    "SAT\tMFH\t4\n",
-    "SAT\tHF\t8\n",
+    "LAT\tULFPL\t1\n",
+    "LAT\tLFL\t4\n",
+    "LAT\tLFPL\t4\n",
+    "LAT\tMFL\t16\n",
+    "LAT\tHFL\t16\n",
+    "LAT\tMFPL\t16\n",
+    "LAT\tHFPL\t16\n",
+    "SAT\tLFS\t1\n",
+    "SAT\tMFLS\t4\n",
+    "SAT\tMFHS\t4\n",
+    "SAT\tHFS\t8\n",
     "\"\"\"\n",
     "\n",
     "from astropy.io import ascii\n",
@@ -113,7 +113,7 @@
     "    thinfp : int\n",
     "        thinning factor\n",
     "    \"\"\"\n",
-    "    return (thinfp_table[thinfp_table[\"band\"] == channel[:-2]])[\"thinfp\"][0]"
+    "    return (thinfp_table[thinfp_table[\"band\"] == channel[:-1]])[\"thinfp\"][0]"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "outputs": [],
    "source": [
     "assert get_thinfp(\"ULFPL1\") == 1\n",
-    "assert get_thinfp(\"HFS2\") == 16\n",
+    "assert get_thinfp(\"HFS2\") == 8\n",
     "assert get_thinfp(\"MFLS1\") == 4"
    ]
   },
