update tube years tests

--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -214,7 +214,7 @@
     "                assert tube_years == 0, \"No ULFL in Chile\"              \n",
     "            else:\n",
     "                if channel.startswith(\"MFL\"):\n",
-    "                    assert tube_years == 24*7, \"12+12 MFL channels\"\n",
+    "                    assert tube_years == 54*2*7, \"54+54 MFL channels\"\n",
     "        if site == \"Pole\":\n",
     "            if telescope == \"SAT\":\n",
     "                if channel.startswith(\"LFS\"):\n",
@@ -222,8 +222,8 @@
     "                elif channel.startswith(\"MF\"):\n",
     "                    assert tube_years == 6*7, \"2 LFS Tubes\"                  \n",
     "            else:\n",
-    "                if channel.startswith(\"HFL\"):\n",
-    "                    assert tube_years == 4*7, \"4 HFL tubes\"            "
+    "                if channel.startswith(\"HFPL\"):\n",
+    "                    assert tube_years == 18*7, \"18 HFL tubes\"            "
    ]
   },
   {
