take into account simulated tubes

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -56,7 +56,13 @@
     "    chile=dict(SAT=0.988, LAT=1.042),\n",
     ")\n",
     "\n",
-    "mapmaking_naming = {\"SAT\":\"telescope_all_time_all_filtered.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_bmap.fits\"}"
+    "mapmaking_naming = {\"SAT\":\"telescope_all_time_all_filtered.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_bmap.fits\"}\n",
+    "\n",
+    "simulated_tubes = dict(                                                                                                                                      \n",
+    "    LFS=1, MFLS= 1, MFHS=1, HFS=1, #SAT\n",
+    "    LFL=8, MFL=54, HFL=23, # LAT Chile\n",
+    "    ULFPL=4, LFPL=9, MFPL=54, HFPL=18 # LAT Pole\n",
+    ")"
    ]
   },
   {
