--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -51,7 +51,8 @@
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
     "    read_instrument_model,\n",
-    "    mapmaking_naming\n",
+    "    mapmaking_naming,\n",
+    "    simulated_tubes\n",
     ")"
    ]
   },
@@ -269,7 +270,7 @@
     "    output_map[output_map == hp.UNSEEN] = np.nan\n",
     "    output_map[output_map == 0] = np.nan\n",
     "    \n",
-    "    # input map is 10 days at 100% efficiency\n",
+    "    # input map is 10 days\n",
     "    output_map *= np.sqrt(\n",
     "        10\n",
     "        * simulations_observing_efficiency[site.lower()].get(telescope, 1)\n",
@@ -280,7 +281,7 @@
     "            )\n",
     "        )\n",
     "    )\n",
-    "    output_map /= np.sqrt(get_tube_years(config, site, channel))\n",
+    "    output_map /= np.sqrt(get_tube_years(config, site, channel)/simulated_tubes[band])\n",
     "    # focal plane thinning factor of TOD simulations\n",
     "    output_map /= np.sqrt(get_thinfp(channel))\n",
     "    return output_map"
