update telescope years test

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -142,15 +142,21 @@
     "        if site == \"Chile\":\n",
     "            if telescope == \"SAT\":\n",
     "                assert telescope_years == 0, \"All SAT at Pole\"\n",
-    "            elif channel.startswith(\"ULFL\"):\n",
+    "            elif channel[\"band\"].startswith(\"ULFL\"):\n",
     "                assert telescope_years == 0, \"No ULFL in Chile\"              \n",
     "            else:\n",
-    "                assert telescope_years == 14, \"2 LAT each band\"\n",
+    "                if \"P\" in channel[\"band\"]:\n",
+    "                    assert telescope_years == 0, \"Pole only LAT\"\n",
+    "                else:                   \n",
+    "                    assert telescope_years == 14, \"2 LAT each band\"\n",
     "        if site == \"Pole\":\n",
     "            if telescope == \"SAT\":\n",
     "                assert telescope_years == 14, \"2 SAT telescopes each band\"\n",
     "            else:\n",
-    "                assert telescope_years == 7, \"1 LAT with all 4 bands\" \n",
+    "                if \"P\" in channel[\"band\"]:\n",
+    "                    assert telescope_years == 7, \"1 LAT with all 4 bands\"\n",
+    "                else:\n",
+    "                    assert telescope_years == 0, \"Chile only LAT\"\n",
     "    print(30 * \"=\")"
    ]
   },
