--- a/04_hitmap_wcov.ipynb
+++ b/04_hitmap_wcov.ipynb
@@ -44,7 +44,6 @@
     "\n",
     "from s4_design_sim_tool.core import (\n",
     "    get_telescope,\n",
-    "    get_band,\n",
     "    get_observing_efficiency,\n",
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
@@ -121,12 +120,11 @@
     "    # which is the same as noise except squared\n",
     "\n",
     "    telescope = get_telescope(channel)\n",
-    "    band = get_band(channel)\n",
     "\n",
     "    scaling = (\n",
     "        365.25\n",
     "        * get_observing_efficiency(\n",
-    "            config[\"experiment\"][\"observing_efficiency\"], site, telescope, band\n",
+    "            config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
     "        )\n",
     "    ) / (10 * simulations_observing_efficiency[site.lower()].get(telescope, 1))\n",
     "    scaling *= get_tube_years(config, site, channel)\n",
