remove get_band, only use channel

--- a/02_atmosphere.ipynb
+++ b/02_atmosphere.ipynb
@@ -37,7 +37,6 @@
     "\n",
     "from s4_design_sim_tool.core import (\n",
     "    get_telescope,\n",
-    "    get_band,\n",
     "    get_observing_efficiency,\n",
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
@@ -94,10 +93,10 @@
     "        Channel tag, e.g. 'MFHS1'\n",
     "    \"\"\"\n",
     "    telescope_years = 0\n",
-    "    for tube, bands in config[\"telescopes\"][get_telescope(channel)].items():\n",
-    "        if bands[\"site\"].lower() == site.lower():\n",
-    "            has_band = bands.get(channel[:-1], 0) > 0\n",
-    "            telescope_years += has_band * bands.get(\n",
+    "    for telescope_name, telescope_config in config[\"telescopes\"][get_telescope(channel)].items():\n",
+    "        if telescope_config[\"site\"].lower() == site.lower():\n",
+    "            has_band = telescope_config.get(channel[:-1], 0) > 0\n",
+    "            telescope_years += has_band * telescope_config.get(\n",
     "                \"years\", config[\"experiment\"][\"total_experiment_length_years\"]\n",
     "            )\n",
     "    return telescope_years"
@@ -191,7 +190,6 @@
     "    \"\"\"\n",
     "\n",
     "    telescope = get_telescope(channel)\n",
-    "    band = get_band(channel)\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
     "        / f\"{site.lower()}_atmosphere_{telescope}_{channel}_{mapmaking_naming[telescope]}\"\n",
@@ -210,7 +208,7 @@
     "        / (\n",
     "            365.25\n",
     "            * get_observing_efficiency(\n",
-    "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, band\n",
+    "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
     "            )\n",
     "        )\n",
     "    )\n",
