--- a/03_noise.ipynb
+++ b/03_noise.ipynb
@@ -46,7 +46,6 @@
     "\n",
     "from s4_design_sim_tool.core import (\n",
     "    get_telescope,\n",
-    "    get_band,\n",
     "    get_observing_efficiency,\n",
     "    base_folder,\n",
     "    simulations_observing_efficiency,\n",
@@ -64,7 +63,7 @@
    "source": [
     "# export\n",
     "\n",
-    "thinfp_string = \"\"\"telescope\tband\tthinfp\n",
+    "thinfp_string = \"\"\"telescope\ttube\tthinfp\n",
     "LAT\tULFPL\t1\n",
     "LAT\tLFL\t4\n",
     "LAT\tLFPL\t4\n",
@@ -114,7 +113,7 @@
     "    thinfp : int\n",
     "        thinning factor\n",
     "    \"\"\"\n",
-    "    return (thinfp_table[thinfp_table[\"band\"] == channel[:-1]])[\"thinfp\"][0]"
+    "    return (thinfp_table[thinfp_table[\"tube\"] == channel[:-1]])[\"thinfp\"][0]"
    ]
   },
   {
@@ -149,10 +148,10 @@
     "        Channel tag, e.g. 'MFHS1'\n",
     "    \"\"\"\n",
     "    tube_years = 0\n",
-    "    for tube, bands in config[\"telescopes\"][get_telescope(channel)].items():\n",
-    "        if bands[\"site\"].lower() == site.lower():\n",
-    "            num_tubes = bands.get(channel[:-1], 0)\n",
-    "            tube_years += num_tubes * bands.get(\n",
+    "    for telescope_name, telescope_config in config[\"telescopes\"][get_telescope(channel)].items():\n",
+    "        if telescope_config[\"site\"].lower() == site.lower():\n",
+    "            num_tubes = telescope_config.get(channel[:-1], 0)\n",
+    "            tube_years += num_tubes * telescope_config.get(\n",
     "                \"years\", config[\"experiment\"][\"total_experiment_length_years\"]\n",
     "            )\n",
     "    return tube_years"
@@ -257,7 +256,6 @@
     "        Output map with all emissions combined, uses nan for missing pixels\n",
     "    \"\"\"\n",
     "    telescope = get_telescope(channel)\n",
-    "    band = get_band(channel)\n",
     "    map_filename = (\n",
     "        Path(f\"{realization:08d}\")\n",
     "        / f\"{site.lower()}_noise_{telescope}_{channel}_{mapmaking_naming[telescope]}\"\n",
@@ -277,11 +275,11 @@
     "        / (\n",
     "            365.25\n",
     "            * get_observing_efficiency(\n",
-    "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, band\n",
+    "                config[\"experiment\"][\"observing_efficiency\"], site, telescope, channel\n",
     "            )\n",
     "        )\n",
     "    )\n",
-    "    output_map /= np.sqrt(get_tube_years(config, site, channel)/simulated_tubes[band])\n",
+    "    output_map /= np.sqrt(get_tube_years(config, site, channel)/simulated_tubes[channel[:-1]])\n",
     "    # focal plane thinning factor of TOD simulations\n",
     "    output_map /= np.sqrt(get_thinfp(channel))\n",
     "    return output_map"
@@ -405,7 +403,7 @@
    "outputs": [],
    "source": [
     "np.testing.assert_allclose(input_map[input_map != hp.UNSEEN] * \\\n",
-    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / 8 / (7 * 365.25 * .2) / 4),\n",
+    "    np.sqrt(10 * simulations_observing_efficiency[site.lower()][telescope] / 8 / (7 * 365.25 * 0.1359894704) / 4),\n",
     "    output_map[output_map != hp.UNSEEN], rtol=1e-6)"
    ]
   },
