--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -108,39 +108,21 @@
     "    return channel[-2] + \"AT\"\n",
     "\n",
     "\n",
-    "def get_band(channel):\n",
-    "    \"\"\"Identify the frequency band of a channel\n",
-    "\n",
-    "    Currently it is just removing the last character\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    channel : str\n",
-    "        channel tag, e.g. MFH1\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    band : str\n",
-    "        'MFH'\n",
-    "    \"\"\"\n",
-    "    return channel[:-1]\n",
-    "\n",
-    "\n",
-    "def get_observing_efficiency(observing_efficiency_config, site, telescope, band):\n",
+    "def get_observing_efficiency(observing_efficiency_config, site, telescope, channel):\n",
     "    \"\"\"Extract the observing frequency for a specific channel from\n",
     "    the configuration dictionary\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
     "    observing_efficiency_config : dict\n",
-    "        the order of keys should be site, telescope, band\n",
-    "        e.g. {\"Pole\":{\"LAT\":{\"HFL\":0.1}}, \"default\":0.2}\n",
+    "        the order of keys should be site, telescope, channel\n",
+    "        e.g. {\"Pole\":{\"LAT\":{\"HFL1\":0.1}}, \"default\":0.2}\n",
     "    site : str\n",
     "        site, Pole or Chile\n",
     "    telescope : str\n",
     "        LAT or SAT\n",
-    "    band: str\n",
-    "        e.g. HFL\n",
+    "    channel: str\n",
+    "        e.g. HFL1\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -150,7 +132,7 @@
     "    if site in observing_efficiency_config:\n",
     "        if telescope in observing_efficiency_config[site]:\n",
     "            try:\n",
-    "                return observing_efficiency_config[site][telescope][band]\n",
+    "                return observing_efficiency_config[site][telescope][channel]\n",
     "            except KeyError:\n",
     "                try:\n",
     "                    return observing_efficiency_config[site][telescope][\"default\"]\n",
@@ -169,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "observing_efficiency_config =  {\"Pole\":{\"LAT\":{\"HFL\":0.1}}, \"default\":0.2}"
+    "observing_efficiency_config =  {\"Pole\":{\"LAT\":{\"HFL1\":0.1}}, \"default\":0.2}"
    ]
   },
   {
@@ -178,9 +160,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert get_observing_efficiency(observing_efficiency_config, \"Pole\", \"LAT\", \"HFL\") == .1\n",
-    "assert get_observing_efficiency(observing_efficiency_config, \"Pole\", \"LAT\", \"MFL\") == .2\n",
-    "assert get_observing_efficiency(observing_efficiency_config, \"Chile\", \"LAT\", \"MFL\") == .2"
+    "assert get_observing_efficiency(observing_efficiency_config, \"Pole\", \"LAT\", \"HFL1\") == .1\n",
+    "assert get_observing_efficiency(observing_efficiency_config, \"Pole\", \"LAT\", \"MFL1\") == .2\n",
+    "assert get_observing_efficiency(observing_efficiency_config, \"Chile\", \"LAT\", \"MFL2\") == .2"
    ]
   },
   {
@@ -189,10 +171,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "observing_efficiency_config_telescope_default =  {\"Pole\":{\"LAT\":{\"HFL\":0.1, \"default\":.15}}, \"default\":0.2}\n",
+    "observing_efficiency_config_telescope_default =  {\"Pole\":{\"LAT\":{\"HFL2\":0.1, \"default\":.15}}, \"default\":0.2}\n",
     "\n",
-    "assert get_observing_efficiency(observing_efficiency_config_telescope_default, \"Pole\", \"LAT\", \"HFL\") == .1\n",
-    "assert get_observing_efficiency(observing_efficiency_config_telescope_default, \"Pole\", \"LAT\", \"MFL\") == .15"
+    "assert get_observing_efficiency(observing_efficiency_config_telescope_default, \"Pole\", \"LAT\", \"HFL2\") == .1\n",
+    "assert get_observing_efficiency(observing_efficiency_config_telescope_default, \"Pole\", \"LAT\", \"MFL1\") == .15"
    ]
   },
   {
@@ -201,11 +183,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "observing_efficiency_config_site_default =  {\"Pole\":{\"default\":.19, \"LAT\":{\"HFL\":0.1, \"default\":.15}}, \"default\":0.2}\n",
+    "observing_efficiency_config_site_default =  {\"Pole\":{\"default\":.19, \"LAT\":{\"HFL2\":0.1, \"default\":.15}}, \"default\":0.2}\n",
     "\n",
-    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"LAT\", \"HFL\") == .1\n",
-    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"LAT\", \"MFL\") == .15\n",
-    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"SAT\", \"LFS\") == .19"
+    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"LAT\", \"HFL2\") == .1\n",
+    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"LAT\", \"MFL1\") == .15\n",
+    "assert get_observing_efficiency(observing_efficiency_config_site_default, \"Pole\", \"SAT\", \"LFS1\") == .19"
    ]
   },
   {
