mapmaking efficiency and simulated tubes

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -39,7 +39,8 @@
     "import os\n",
     "\n",
     "base_folder = os.environ.get(\n",
-    "    \"S4REFSIMTOOL_INPUT\", \"/global/cscratch1/sd/keskital/s4sim/reference_tool_round_2/out\"\n",
+    "    \"S4REFSIMTOOL_INPUT\",\n",
+    "    \"/global/cscratch1/sd/keskital/s4sim/reference_tool_round_2/out\",\n",
     ")"
    ]
   },
@@ -51,17 +52,52 @@
    "source": [
     "# export\n",
     "\n",
-    "simulations_observing_efficiency = dict(\n",
-    "    pole=dict(SAT=0.642, LAT=0.754),\n",
-    "    chile=dict(SAT=0.988, LAT=1.042),\n",
-    ")\n",
+    "# computed from the hitmap, see 04_hitmap_wcov\n",
+    "simulations_observing_efficiency = {\n",
+    "    \"pole\": {\n",
+    "        \"ULFPL1\": 0.7094065625,\n",
+    "        \"LFPL1\": 0.7094065625,\n",
+    "        \"LFPL2\": 0.7094065625,\n",
+    "        \"MFPL1\": 0.7094065625,\n",
+    "        \"MFPL2\": 0.7094065625,\n",
+    "        \"HFPL1\": 0.7094065625,\n",
+    "        \"HFPL2\": 0.7094065625,\n",
+    "        \"LFS1\": 0.5410630787037037,\n",
+    "        \"LFS2\": 0.5410630787037037,\n",
+    "        \"MFLS1\": 0.5410630787037037,\n",
+    "        \"MFHS1\": 0.5410630787037037,\n",
+    "        \"MFLS2\": 0.5410630787037037,\n",
+    "        \"MFHS2\": 0.5410630787037037,\n",
+    "        \"HFS1\": 0.5410630787037037,\n",
+    "        \"HFS2\": 0.5410630787037037,\n",
+    "    },\n",
+    "    \"chile\": {\n",
+    "        \"LFL1\": 1.0367161458333334,\n",
+    "        \"LFL2\": 1.0367161458333334,\n",
+    "        \"MFL1\": 1.0367161458333334,\n",
+    "        \"MFL2\": 1.0367161458333334,\n",
+    "        \"HFL1\": 1.0350467156468064,\n",
+    "        \"HFL2\": 1.0350467156468064,\n",
+    "    },\n",
+    "}\n",
     "\n",
-    "mapmaking_naming = {\"SAT\":\"telescope_all_time_all_filtered.fits.gz\", \"LAT\":\"filtered_telescope_all_time_all_bmap.fits\"}\n",
+    "mapmaking_naming = {\n",
+    "    \"SAT\": \"telescope_all_time_all_filtered.fits.gz\",\n",
+    "    \"LAT\": \"filtered_telescope_all_time_all_bmap.fits\",\n",
+    "}\n",
     "\n",
-    "simulated_tubes = dict(                                                                                                                                      \n",
-    "    LFS=1, MFLS= 1, MFHS=1, HFS=1, #SAT\n",
-    "    LFL=8, MFL=54, HFL=23, # LAT Chile\n",
-    "    ULFPL=4, LFPL=9, MFPL=54, HFPL=18 # LAT Pole\n",
+    "simulated_tubes = dict(\n",
+    "    LFS=1,\n",
+    "    MFLS=1,\n",
+    "    MFHS=1,\n",
+    "    HFS=1,  # SAT\n",
+    "    LFL=8,\n",
+    "    MFL=54,\n",
+    "    HFL=23,  # LAT Chile\n",
+    "    ULFPL=4,\n",
+    "    LFPL=9,\n",
+    "    MFPL=54,\n",
+    "    HFPL=18,  # LAT Pole\n",
     ")"
    ]
   },
